--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "dependencies": {
-    "react-router-dom": "^7.10.0"
-  }
+  "name": "noclip-root",
+  "private": true,
+  "scripts": {
+    "build": "cd client && npm install && npm run build",
+    "dev": "cd client && npm run dev"
+  },
+  "dependencies": {}
 }
